--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Apple stats visualisation",
   "private": true,
   "scripts": {
+    "build": "npx webpack",
+    "eslint-all": "npx eslint ./src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,8 +19,12 @@
   },
   "homepage": "https://github.com/j-hha/apples#readme",
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
+    "eslint": "^9.5.0",
+    "globals": "^15.6.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^7.14.1",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   },
