--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npx webpack",
     "eslint-all": "npx eslint ./src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,11 +20,14 @@
   "homepage": "https://github.com/j-hha/apples#readme",
   "devDependencies": {
     "@eslint/js": "^9.5.0",
+    "@jest/globals": "^29.7.0",
     "css-loader": "^7.1.2",
     "eslint": "^9.5.0",
     "globals": "^15.6.0",
     "html-loader": "^5.0.0",
+    "jest": "^29.7.0",
     "style-loader": "^4.0.0",
+    "ts-jest": "^29.1.5",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.14.1",
