--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "globals": "^15.6.0",
     "html-loader": "^5.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "style-loader": "^4.0.0",
     "ts-jest": "^29.1.5",
     "ts-loader": "^9.5.1",
