--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
       "module": "ES2022",
       "target": "es6",
       "allowJs": true,
-      "moduleResolution": "node"
+      "moduleResolution": "node",
+      "esModuleInterop": true,
     }
 }
