--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,6 +21,6 @@ jobs:
       with:
         node-version: 19.x
         cache: 'npm'
-    - run: npm install
+    - run: npm install --legacy-peer-deps
     - run: npm run build
     - run: npm test
