added linting step

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,4 +23,5 @@ jobs:
         cache: 'npm'
     - run: npm install --legacy-peer-deps
     - run: npm run build
+    - run: npm run eslint-all
     - run: npm test
